--- a/Memo/MainWindow.xaml
+++ b/Memo/MainWindow.xaml
@@ -44,7 +44,7 @@
         <Border DockPanel.Dock="Bottom">    
             <DockPanel>               
                 <Button DockPanel.Dock="Right" >Mostrar</Button>
-                <ProgressBar Minimum="0" Maximum="100"  Name="pbStatus" Padding="10" Value="50"/>
+                <ProgressBar Minimum="0" Maximum="100"  x:Name="barraProgreso" Padding="10"/>
             </DockPanel>            
         </Border>
         <Grid x:Name="GridCartas">
