--- a/Memo/MainWindow.xaml
+++ b/Memo/MainWindow.xaml
@@ -43,7 +43,7 @@
         </Border>
         <Border DockPanel.Dock="Bottom">    
             <DockPanel>               
-                <Button DockPanel.Dock="Right" >Mostrar</Button>
+                <Button DockPanel.Dock="Right" Click="Button_Click_1" >Mostrar</Button>
                 <ProgressBar Minimum="0" Maximum="100"  x:Name="barraProgreso" Padding="10"/>
             </DockPanel>            
         </Border>
