--- a/Memo/MainWindow.xaml
+++ b/Memo/MainWindow.xaml
@@ -37,13 +37,13 @@
                 <TextBlock>Dificultad:</TextBlock>
                 <RadioButton x:Name="Facil">Facil</RadioButton>
                 <RadioButton x:Name="Media">Media</RadioButton>
-                <RadioButton x:Name="Alta">Alta</RadioButton>                
-                <Button Click="Button_Click">Iniciar</Button>
+                <RadioButton x:Name="Alta">Alta</RadioButton>
+                <Button Click="Boton_Iniciar">Iniciar</Button>
             </StackPanel>
         </Border>
         <Border DockPanel.Dock="Bottom">    
-            <DockPanel>               
-                <Button DockPanel.Dock="Right" Click="Button_Click_1" >Mostrar</Button>
+            <DockPanel>
+                <Button DockPanel.Dock="Right" Click="Boton_Mostrar" >Mostrar</Button>
                 <ProgressBar Minimum="0" Maximum="100"  x:Name="barraProgreso" Padding="10"/>
             </DockPanel>            
         </Border>
